--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: 'Baloo 2', cursive, "Helvetica Neue", sans-serif; }
+body{
+    background-color: #1c2022d6;;
+}
