--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,7 @@
     
     <mat-card-actions align="end">
         <button mat-stroked-button class="analyze-button" (click)='anaylze(codeInput.value)' >Analyze</button>
+        <button mat-stroked-button class="parse-button" (click)='parse()' >Parse</button>
     </mat-card-actions>
 
 </mat-card>
