Added tabs to the output card

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,39 +24,49 @@
 
 <mat-card class="mat-elevation-z8">
   <mat-card-header>
-    <mat-card-title>Token generator</mat-card-title>
+    <mat-card-title>Output</mat-card-title>
   </mat-card-header>
   <mat-card-content>
   
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <mat-tab-group>
+      <mat-tab label="Token generator">
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-      <ng-container matColumnDef="number">
-        <th mat-header-cell *matHeaderCellDef> No. </th>
-        <td mat-cell *matCellDef="let element"> {{element.number}} </td>
-      </ng-container>
-    
-      <!-- Name Column -->
-      <ng-container matColumnDef="tokenName">
-        <th mat-header-cell *matHeaderCellDef> Lexeme </th>
-        <td mat-cell *matCellDef="let element"> {{element.tokenName}} </td>
-      </ng-container>
-    
-      <!-- Weight Column -->
-      <ng-container matColumnDef="lineNumber">
-        <th mat-header-cell *matHeaderCellDef> Line Number</th>
-        <td mat-cell *matCellDef="let element"> {{element.lineNumber}} </td>
-      </ng-container>
-    
-      <!-- Symbol Column -->
-      <ng-container matColumnDef="tokenType">
-        <th mat-header-cell *matHeaderCellDef> Class </th>
-        <td mat-cell *matCellDef="let element"> {{element.tokenType}} </td>
-      </ng-container>
+          <ng-container matColumnDef="number">
+            <th mat-header-cell *matHeaderCellDef> No. </th>
+            <td mat-cell *matCellDef="let element"> {{element.number}} </td>
+          </ng-container>
+        
+          <!-- Name Column -->
+          <ng-container matColumnDef="tokenName">
+            <th mat-header-cell *matHeaderCellDef> Lexeme </th>
+            <td mat-cell *matCellDef="let element"> {{element.tokenName}} </td>
+          </ng-container>
+        
+          <!-- Weight Column -->
+          <ng-container matColumnDef="lineNumber">
+            <th mat-header-cell *matHeaderCellDef> Line Number</th>
+            <td mat-cell *matCellDef="let element"> {{element.lineNumber}} </td>
+          </ng-container>
+        
+          <!-- Symbol Column -->
+          <ng-container matColumnDef="tokenType">
+            <th mat-header-cell *matHeaderCellDef> Class </th>
+            <td mat-cell *matCellDef="let element"> {{element.tokenType}} </td>
+          </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-    </table>
-
+        </table>
+        </mat-tab>
+        <mat-tab label="Parse Tree">
+        </mat-tab>
+        <mat-tab >
+          <ng-template mat-tab-label>
+              <span matBadge="4" matBadgeOverlap="false">Error</span>
+          </ng-template>
+        </mat-tab>
+    </mat-tab-group>
   </mat-card-content>
 </mat-card>
