--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
   
     <mat-tab-group>
       <mat-tab label="Token generator">
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" >
 
           <ng-container matColumnDef="number">
             <th mat-header-cell *matHeaderCellDef> No. </th>
