--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
   </mat-card-header>
   <mat-card-content>
   
-    <mat-tab-group>
+    <mat-tab-group [selectedIndex]="currentTab">
       <mat-tab label="Token generator">
         <table mat-table [dataSource]="dataSource" >
 
@@ -61,6 +61,7 @@
         </table>
         </mat-tab>
         <mat-tab label="Parse Tree">
+          <div id="tree"></div>
         </mat-tab>
         <mat-tab >
           <ng-template mat-tab-label>
