Added sucessful or failed message

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -45,3 +45,13 @@ table{
 #tree{
     padding: 20px;
 }
+.message{
+    font-weight: 300;
+    padding-left: 16px;
+}
+.no-errors{
+    color:  green;
+}
+.errors{
+    color: red;
+}
